2002-07-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* doc/C/libgda-docs.sgml: added documentation about the format of
	the schema data models.

	* libgda/gda-value.h: added GDA_VALUE_TYPE_TYPE, for specifying
	GdaValueType's in GdaValue's.

	* libgda/gda-value.c (gda_value_new_type): new function.
	(set_from_string): manage GDA_VALUE_TYPE_TYPE.
	(gda_value_copy): ditto.
	(gda_value_set_from_value): ditto.
	(gda_value_stringify): ditto.
	(gda_value_compare): ditto.

	* providers/mysql/gda-mysql-provider.c (get_mysql_tables): retrieve
	extra data.
	(get_mysql_types): added new fields for TYPES schema.

	* providers/mysql/gda-mysql-recordset.c (fetch_row): don't pass NULL
	values to ato* functions.

2002-07-08  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 0.8.192

2002-07-04  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-config.c:
	(write_config_file): removed unneeded assertion. It now creates an
	empty file if no sections in the list.

2002-07-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-connection.c (gda_connection_get_type): fixed
	documentation for this function.

2002-06-28  Tim Coleman <tim@timcoleman.com>

	* providers/oracle/gda-oracle-provider.c:
	- Added code to retrieve public/unique/foreign key information
	  for schema purposes.
	- Free up more Oracle memory when bad things happen
	- Added a function to retrieve list of Oracle tablespaces
	  for schema purposes.
	  
	* providers/oracle/gda-oracle-recordset.c:
	- Free up more Oracle memory when bad things happen
	- Clean up the get_n_rows code to work properly

	* providers/oracle/utils.c:
	- only allocate memory for the string buffer when I need it

2002-07-01  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-connection.c:
	(gda_connection_finalize):
	(gda_connection_add_error):
	(gda_connection_add_error_list): keep the error list stored for later
	retrieval. Use gda_error_list_(copy|free).

	(gda_connection_get_errors): returns a the latest error(s) ocurred in